objects/Restrictions__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Critical Background Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted: Permission Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_RI_Member__c</fullName>
        <inlineHelpText>Is this organization a RI member?</inlineHelpText>
        <label>Current RI Member</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delegate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_of_Complaint_Concern__c</fullName>
        <inlineHelpText>Please describe the complaint/concern</inlineHelpText>
        <label>Description of Complaint/Concern</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_Not_Apply_To__c</fullName>
        <label>Does Not Apply To</label>
        <picklist>
            <picklistValues>
                <fullName>Syndicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Non-Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Program_Leader_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Marketing Program Leader Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Renewal_Opportunity_Owners_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Renewal Opportunity Owners Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interaction_Where_Complaint_Identified__c</fullName>
        <label>Interaction Where Complaint Identified</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing scheduling request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing event/webinar recruitment request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing visit/presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI AM commercial contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI AM service contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT AM commercial contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT AM service contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndicated/Expert Center expertise request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT delivery service contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Program_Leader_Email_Formula__c</fullName>
        <formula>Program_Interaction_Prompted_Discussion__r.Marketing_Program_Leader__r.Email</formula>
        <label>Marketing Program Leader Email Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Program_Leader_Email__c</fullName>
        <description>CR-318</description>
        <label>Marketing Program Leader Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Member_Contact_Subject_of_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the person who was the subject of the interaction request, which may be the same or different from the person above</inlineHelpText>
        <label>Member Contact Subject of Request</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Restrictions (Member contact subject of request)</relationshipLabel>
        <relationshipName>Restrictions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Details</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Restrictions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Institution__c</fullName>
        <formula>Primary_contact_submitting_complaint_con__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_RI_AM_contact_EA_or_AE_or_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary RI AM contact (EA or AE or RM)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Restrictions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_contact_submitting_complaint_con__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the person expressing the complaint or concern, regardless of their title or role in the interaction</inlineHelpText>
        <label>Primary Contact Submitting Complaint</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Restrictions</relationshipLabel>
        <relationshipName>Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Exceptions__c</fullName>
        <label>Program Exceptions</label>
        <picklist>
            <picklistValues>
                <fullName>ACBE - Health Care Governance Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACBP - Physician Boot Camp on Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACFA - Academy Fellowship Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACFL - Frontline Nursing Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACGM - Performance Leadership Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACHP - The Academy Fellowship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACIN - Health Care Industry Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACNL - Nursing Leadership Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACPA - Performance Acceleration Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP - Application &amp; Tech Collaborative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHEH - Higher Ed Health Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHSM - Higher Ed Spend Mgmt Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BICC - Concuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIEC- Corp. Health Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIED - ED Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIEH - Health Benefits Collaborative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BINU - Nursing Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOR - Surgery Performance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIPC - The Crimson Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIPM - Crimson Practice Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIPP - Physician Referral Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIQT - Clinical Quality Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIRC - Payment Navigation Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BISM - Spend Mgmt Performance Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIXX - BI General Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDO - Philanthropy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC - Clinical Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH - Council of International Hospitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIHH - Health Care Executive Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIHN - Global Nursing Executive Center</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Program_Interaction_Prompted_Discussion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What specific program interaction prompted the discussion that surfaced the member complaint/concern.</inlineHelpText>
        <label>Program Interaction Prompted Discussion</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Restrictions</relationshipLabel>
        <relationshipName>Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Chairman&apos;s Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA/AE Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large NBB Contract Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Gatekeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Program Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over-Contact, Member Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over-Contact, Non-Member Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Advisory Board Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Program Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal and Business Affairs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Restriction_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Restriction Unique ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Restriction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Restriction</label>
        <referenceTo>Restrictions__c</referenceTo>
        <relationshipLabel>Restrictions</relationshipLabel>
        <relationshipName>Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Run_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Department__c</fullName>
        <label>Source Department</label>
        <picklist>
            <picklistValues>
                <fullName>EA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman&apos;s Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI Growth Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT/Solutions Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Expiration_Date__c  &gt;= Today(),&quot;Active&quot;, &quot;Retired&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Restriction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reason__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Expiration_Date__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>McLaughlin</fullName>
        <columns>NAME</columns>
        <columns>Reason__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>pullins,kanipe</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>active</value>
        </filters>
        <label>McLaughlin</label>
        <sharedTo>
            <role>Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Restrictions4</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Reason__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Primary_Contact_Institution__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Restrictions</label>
    </listViews>
    <listViews>
        <fullName>Shipley_Active_Restrictions</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Reason__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>active</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>lemons</value>
        </filters>
        <label>Lemons Active Restrictions</label>
        <sharedTo>
            <role>GA5RM5</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Only_Certain_Dates_Allowed</fullName>
        <active>true</active>
        <description>Ensure Expiration Date is no greater than 180 days, or 365 days if it is an EA/AE or Legal restriction.</description>
        <errorConditionFormula>OR(
    AND(
        Expiration_Date__c &gt; (Today() + 180),
        NOT(INCLUDES(Reason__c , &quot;EA/AE Account&quot;)),
        NOT(INCLUDES(Reason__c, &quot;Legal and Business Affairs&quot;))
    ),
    Expiration_Date__c &gt; (Today() + 365)
)</errorConditionFormula>
        <errorMessage>A restriction can only be set for a maximum of 180 days, or 365 days if Reason is &quot;EA/AE Account&quot; or &quot;Legal and Business Affairs&quot; restriction.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateOverContact</fullName>
        <active>true</active>
        <description>Restrictions under the Reason field: &quot;Over-Contact, Member Complaint&quot; , and &quot;Over-Contact, Non-Member&quot;
Maximum of 60 days from creation date to expiration date
Minimum of 30 days from creation date to expiration date</description>
        <errorConditionFormula>AND (
OR (
INCLUDES( Reason__c , &apos;Over-Contact, Member Complaint&apos;), 
INCLUDES( Reason__c , &apos;Over-Contact, Non-Member&apos;)
),
OR (
ISNEW(),
ISCHANGED(Reason__c),
ISCHANGED(Expiration_Date__c)
),
OR (
NOT(
AND(
Expiration_Date__c &gt; (TODAY() + 30),
Expiration_Date__c &lt; (TODAY() + 60))
)
)
)</errorConditionFormula>
        <errorMessage>For Restrictions with an &apos;over-contact&apos; Reason selected, the Expiration Date must be between 30 and 60 days from the Created Date of this Restriction. Should you need to update, the Expiration Date must be between 30 and 60 days from Today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>expiration_date_is_6_mo_EA_is_one_year</fullName>
        <active>false</active>
        <description>Ensure Expiration Date is within 365 days for EA&apos;s and within 180 days for all others.</description>
        <errorConditionFormula>(Expiration_Date__c  &gt; (TODAY() + 180))
||
(Expiration_Date__c &gt; (TODAY() + 365) &amp;&amp;  ISPICKVAL(Source_Department__c, &quot;EA&quot;))</errorConditionFormula>
        <errorMessage>Expiration Date must be within 1 year for EA&apos;s and within 6 months for all others.</errorMessage>
    </validationRules>
</CustomObject>